--- a/PublicArt/Welcome/Welcome.storyboard
+++ b/PublicArt/Welcome/Welcome.storyboard
@@ -209,10 +209,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7PZ-LJ-NBF" userLabel="TitleContainer">
-                                <rect key="frame" x="150" y="250" width="300" height="150"/>
+                                <rect key="frame" x="150" y="250" width="300" height="110"/>
                                 <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="otf-yg-pPf">
+                                        <rect key="frame" x="0.0" y="6" width="300" height="51"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="51" id="S1H-Di-p25"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="44"/>
+                                        <state key="normal" title="Public Art">
+                                            <color key="titleColor" red="0.95294117649999999" green="0.17254901959999999" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="onContinueButton:" destination="et8-lR-pQe" eventType="touchUpInside" id="fVp-Tx-aZ0"/>
+                                        </connections>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="YqX-R9-Skk">
-                                        <rect key="frame" x="0.0" y="49" width="300" height="51"/>
+                                        <rect key="frame" x="0.0" y="59" width="300" height="51"/>
                                         <animations/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="51" id="qd6-eL-9tZ"/>
@@ -230,43 +245,29 @@
                                 <animations/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="otf-yg-pPf" firstAttribute="leading" secondItem="7PZ-LJ-NBF" secondAttribute="leading" id="5dY-ef-eFd"/>
+                                    <constraint firstAttribute="trailing" secondItem="YqX-R9-Skk" secondAttribute="trailing" id="CLA-fv-dGZ"/>
                                     <constraint firstAttribute="width" constant="300" id="G3U-AN-Z00"/>
-                                    <constraint firstItem="YqX-R9-Skk" firstAttribute="centerX" secondItem="7PZ-LJ-NBF" secondAttribute="centerX" id="OHN-Pv-mVV"/>
+                                    <constraint firstItem="YqX-R9-Skk" firstAttribute="leading" secondItem="7PZ-LJ-NBF" secondAttribute="leading" id="Hju-nM-KhA"/>
                                     <constraint firstItem="YqX-R9-Skk" firstAttribute="width" secondItem="7PZ-LJ-NBF" secondAttribute="width" id="VOk-dp-G4m"/>
-                                    <constraint firstAttribute="height" constant="150" id="aMD-yU-LPv"/>
-                                    <constraint firstItem="YqX-R9-Skk" firstAttribute="top" secondItem="7PZ-LJ-NBF" secondAttribute="top" constant="49" id="gxC-vw-c3w"/>
+                                    <constraint firstItem="otf-yg-pPf" firstAttribute="top" secondItem="7PZ-LJ-NBF" secondAttribute="top" constant="6" id="WZ4-SZ-Iji"/>
+                                    <constraint firstAttribute="height" constant="110" id="aMD-yU-LPv"/>
+                                    <constraint firstAttribute="trailing" secondItem="otf-yg-pPf" secondAttribute="trailing" id="fmp-Or-Ede"/>
+                                    <constraint firstAttribute="bottom" secondItem="YqX-R9-Skk" secondAttribute="bottom" id="zc5-7j-5q5"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="otf-yg-pPf">
-                                <rect key="frame" x="150" y="250" width="300" height="51"/>
-                                <animations/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="51" id="S1H-Di-p25"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="44"/>
-                                <state key="normal" title="Public Art">
-                                    <color key="titleColor" red="0.95294117649999999" green="0.17254901959999999" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="onContinueButton:" destination="et8-lR-pQe" eventType="touchUpInside" id="fVp-Tx-aZ0"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="otf-yg-pPf" firstAttribute="top" secondItem="pFe-A6-R2q" secondAttribute="bottom" constant="230" id="2hK-Ur-jel"/>
                             <constraint firstItem="7PZ-LJ-NBF" firstAttribute="centerX" secondItem="4qf-Qo-lZH" secondAttribute="centerX" id="IDG-Xd-dIR"/>
-                            <constraint firstItem="otf-yg-pPf" firstAttribute="trailing" secondItem="7PZ-LJ-NBF" secondAttribute="trailing" id="Iob-7p-Qve"/>
-                            <constraint firstItem="7PZ-LJ-NBF" firstAttribute="centerY" secondItem="4qf-Qo-lZH" secondAttribute="centerY" constant="25" id="LA4-nK-xjs"/>
-                            <constraint firstItem="otf-yg-pPf" firstAttribute="leading" secondItem="7PZ-LJ-NBF" secondAttribute="leading" id="vce-W5-Ryn"/>
+                            <constraint firstItem="7PZ-LJ-NBF" firstAttribute="centerY" secondItem="4qf-Qo-lZH" secondAttribute="centerY" constant="5" id="LA4-nK-xjs"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t2c-il-ngC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2480" y="-222"/>
+            <point key="canvasLocation" x="2411" y="-222"/>
         </scene>
     </scenes>
     <resources>
