--- a/PublicArt/Views/HomeCollectionViewCell.xib
+++ b/PublicArt/Views/HomeCollectionViewCell.xib
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="HomeCollectionViewCellID" reuseIdentifier="HomeCollectionViewCellID" id="gTV-IL-0wX" customClass="HomeCollectionViewCell" customModule="PublicArt" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="305" height="248"/>
+            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="305" height="248"/>
+                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kW4-X4-S5Q">
-                        <rect key="frame" x="0.0" y="0.0" width="305" height="248"/>
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CdF-f1-Vcd">
-                                <rect key="frame" x="-5" y="0.0" width="310" height="248"/>
-                                <animations/>
+                                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="31n-QR-UeR"/>
+                                </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6NR-3r-tH5">
-                                <rect key="frame" x="0.0" y="222" width="305" height="26"/>
-                                <animations/>
+                                <rect key="frame" x="0.0" y="174" width="200" height="26"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="26" id="Z5H-rh-thU"/>
@@ -34,23 +34,19 @@
                                 <size key="shadowOffset" width="0.0" height="0.0"/>
                             </label>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="6NR-3r-tH5" secondAttribute="bottom" id="MS1-x0-kaR"/>
                             <constraint firstItem="6NR-3r-tH5" firstAttribute="leading" secondItem="kW4-X4-S5Q" secondAttribute="leading" id="SpQ-la-fZ8"/>
-                            <constraint firstAttribute="bottom" secondItem="CdF-f1-Vcd" secondAttribute="bottom" id="ae6-rX-hgc"/>
                             <constraint firstAttribute="trailing" secondItem="CdF-f1-Vcd" secondAttribute="trailing" id="eHz-hG-91n"/>
-                            <constraint firstItem="CdF-f1-Vcd" firstAttribute="leading" secondItem="kW4-X4-S5Q" secondAttribute="leading" constant="-5" id="fjQ-dn-Xaf"/>
+                            <constraint firstItem="CdF-f1-Vcd" firstAttribute="leading" secondItem="kW4-X4-S5Q" secondAttribute="leading" id="fjQ-dn-Xaf"/>
                             <constraint firstItem="CdF-f1-Vcd" firstAttribute="top" secondItem="kW4-X4-S5Q" secondAttribute="top" id="ifz-9w-ocS"/>
                             <constraint firstAttribute="trailing" secondItem="6NR-3r-tH5" secondAttribute="trailing" id="jrP-J7-dKu"/>
                         </constraints>
                     </view>
                 </subviews>
-                <animations/>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
-            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="kW4-X4-S5Q" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="AeP-bs-tx6"/>
@@ -61,7 +57,9 @@
             <size key="customSize" width="162" height="378"/>
             <connections>
                 <outlet property="imageView" destination="CdF-f1-Vcd" id="ioE-kG-fr9"/>
+                <outlet property="imageViewHeight" destination="31n-QR-UeR" id="efG-cU-eSc"/>
                 <outlet property="menuItemName" destination="6NR-3r-tH5" id="zMe-Ak-hQr"/>
+                <outlet property="menuItemNameHeight" destination="Z5H-rh-thU" id="3HW-ZZ-8lf"/>
             </connections>
             <point key="canvasLocation" x="94.5" y="548"/>
         </collectionViewCell>
