--- a/PublicArt/Views/ArtworkCollectionViewCell.xib
+++ b/PublicArt/Views/ArtworkCollectionViewCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -16,6 +17,15 @@
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oIU-lg-fYT" customClass="RoundedView" customModule="PublicArt" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="250" height="347"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="234" placeholderIntrinsicHeight="0.0" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9EC-iy-keb" userLabel="noImageTitle">
+                                <rect key="frame" x="8" y="283" width="234" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" priority="750" constant="17" id="Kf8-Mm-qvP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4y7-i2-DtZ">
                                 <rect key="frame" x="0.0" y="0.0" width="250" height="300"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -27,11 +37,11 @@
                                 <rect key="frame" x="106" y="132" width="37" height="37"/>
                                 <color key="color" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </activityIndicatorView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OUk-dK-TiW">
-                                <rect key="frame" x="0.0" y="300" width="250" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OUk-dK-TiW">
+                                <rect key="frame" x="0.0" y="300" width="250" height="12"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="1cv-sN-FjR" userLabel="title height = 21"/>
+                                    <constraint firstAttribute="height" priority="250" constant="25" id="1cv-sN-FjR" userLabel="title height = 21"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <nil key="highlightedColor"/>
@@ -39,6 +49,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="9EC-iy-keb" firstAttribute="leading" secondItem="oIU-lg-fYT" secondAttribute="leadingMargin" id="6xL-z0-w9v"/>
+                            <constraint firstItem="OUk-dK-TiW" firstAttribute="top" secondItem="9EC-iy-keb" secondAttribute="bottom" id="Bgx-rH-x0J"/>
                             <constraint firstItem="OUk-dK-TiW" firstAttribute="leading" secondItem="oIU-lg-fYT" secondAttribute="leading" id="CVr-Cd-keT"/>
                             <constraint firstAttribute="trailing" secondItem="4y7-i2-DtZ" secondAttribute="trailing" id="J0H-7O-uCM"/>
                             <constraint firstItem="OUk-dK-TiW" firstAttribute="top" secondItem="4y7-i2-DtZ" secondAttribute="bottom" id="bWb-CF-11q"/>
@@ -47,6 +59,7 @@
                             <constraint firstItem="4y7-i2-DtZ" firstAttribute="leading" secondItem="oIU-lg-fYT" secondAttribute="leading" id="lyw-Ci-zKp"/>
                             <constraint firstItem="4y7-i2-DtZ" firstAttribute="top" secondItem="oIU-lg-fYT" secondAttribute="top" id="u7F-qd-5JZ"/>
                             <constraint firstAttribute="trailing" secondItem="OUk-dK-TiW" secondAttribute="trailing" id="zQG-id-jvv"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9EC-iy-keb" secondAttribute="trailing" id="zRo-WA-2wG"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -68,6 +81,7 @@
                 <outlet property="activityIndicator" destination="vfz-K7-e2S" id="PHk-5E-FVU"/>
                 <outlet property="imageView" destination="4y7-i2-DtZ" id="Xed-ht-s6N"/>
                 <outlet property="imageViewHeight" destination="itg-nF-m4o" id="QYT-6k-qdE"/>
+                <outlet property="noImageTitle" destination="9EC-iy-keb" id="Fj8-Wz-X1w"/>
                 <outlet property="title" destination="OUk-dK-TiW" id="sUc-dN-uVv"/>
                 <outlet property="titleHeight" destination="1cv-sN-FjR" id="ZGb-rg-a89"/>
             </connections>
